# ipynb_output_strip_pre_commit

./: .gitattributes  .gitconfig  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  check_jupyter_notebook_output_strip.py  ipynb_filter.py  keyfilter.py  pyproject.toml  requirements.txt  test.ipynb  test_nb.ipynb
hooks/: check_ipynb_output_strip.py
pre_commit_jupyter_output_strip/: check_jupyter_notebook_output_strip.py
wip_own_filter/: ipynb_filter.py
